# diffexfat

./: .gitignore  Makefile.am  README.md  configure.ac
diff/: diffexfat.c  diffexfat.h  list.h
include/: diffexfat.h
src/: diffexfat.c
